--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dompurify": "^3.2.2",
     "framer-motion": "^11.12.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.460.0",
