--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "next": "^15.0.1",
     "p-limit": "^6.1.0",
     "react": "^18.3.1",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-letter": "^0.4.0",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.7",
     "server-only": "^0.0.1",
