--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@reduxjs/toolkit": "^2.4.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
+    "@tiptap/core": "^2.10.3",
     "@tiptap/extension-text": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
@@ -63,6 +64,7 @@
     "react-letter": "^0.4.0",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.7",
+    "react-select": "^5.8.3",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
