--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dompurify": "^3.2.2",
     "framer-motion": "^11.12.0",
     "geist": "^1.3.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.460.0",
     "next": "^15.0.1",
     "p-limit": "^6.1.0",
