--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.7",
     "react-select": "^5.8.3",
+    "react-spinners": "^0.15.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
