--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.460.0",
     "next": "^15.0.1",
+    "next-themes": "^0.4.4",
     "p-limit": "^6.1.0",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
@@ -72,6 +73,7 @@
     "react-select": "^5.8.3",
     "react-spinners": "^0.15.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.7.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
