--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-spinners": "^0.15.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.1",
+    "stripe": "^17.4.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
