--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,22 @@
-DATABASE_URL="postgresql://postgres:password@localhost:5432/auto-mailinh.io"
+# ===================== DATABASE URL ====================
+DATABASE_URL="postgresql://<username>:<password>@<host>:<port>/<database>?sslmode=require"
+
+# ===================== CLERK ENVS ======================
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="<your-clerk-publishable-key>"
+CLERK_SECRET_KEY="<your-clerk-secret-key>"
+NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
+NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
+
+# ===================== AURINKO ENVS ====================
+AURINKO_CLIENT_ID="<your-aurinko-client-id>"
+AURINKO_CLIENT_SECRET="<your-aurinko-client-secret>"
+AURINKO_SIGNING_SECRET="<your-aurinko-signing-secret>"
+
+# ===================== APP URL =========================
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+# ===================== AI ENVS =========================
+GEMINI_API_KEY="<your-gemini-api-key>"
+
+# ===================== ORAMAS ENVS =====================
+ORAMA_API_KEY="<your-orama-api-key>"
